[gd_scene load_steps=7 format=3 uid="uid://cuiagu4acte4p"]

[ext_resource type="Texture2D" uid="uid://cc433ywxp3cj8" path="res://icon.svg" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://tpwwl6ybtsrn" path="res://scenes/player.gd" id="1_qhqgy"]
[ext_resource type="PackedScene" uid="uid://dbtnqwo8y26yy" path="res://components/input_component.tscn" id="2_g2els"]
[ext_resource type="PackedScene" uid="uid://5hajm62ou7lv" path="res://components/movement_component.tscn" id="4_dqkch"]
[ext_resource type="PackedScene" uid="uid://b67jrqw4lodbm" path="res://components/health_component.tscn" id="5_qlg0r"]

[sub_resource type="CircleShape2D" id="CircleShape2D_g2els"]
radius = 12.0

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("input_component", "movement_component", "health_component")]
script = ExtResource("1_qhqgy")
input_component = NodePath("InputComponent")
movement_component = NodePath("MovementComponent")
health_component = NodePath("HealthComponent")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_3vyb7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_g2els")

[node name="InputComponent" parent="." instance=ExtResource("2_g2els")]

[node name="MovementComponent" parent="." instance=ExtResource("4_dqkch")]
speed = 100.0

[node name="HealthComponent" parent="." instance=ExtResource("5_qlg0r")]
maxHealth = 100.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
